Fix failing unit tests and upgrade mvn to Java 11.